tests/snapshots/snapshot_test__navigation_hierarchy.snap
---
source: tests/snapshot_test.rs
expression: combined_snapshot
---
=== Level 1: Workspaces (Down) ===
┌ Navigation ──────────────────────────┐
│▸ WS Engineering                      │
│  WS Marketing                        │
│  WS Design                           │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 2: Spaces (Down) ===
┌ Navigation ──────────────────────────┐
│▸ SP Backend Team                     │
│  SP Frontend Team                    │
│  SP DevOps Team                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 3: Folders (Down) ===
┌ Navigation ──────────────────────────┐
│▸ FL Q1 Projects                      │
│  FL Q2 Projects                      │
│  FL Q3 Projects                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 4: Lists (Down) ===
┌ Navigation ──────────────────────────┐
│▸ LI Sprint Planning                  │
│  LI Bug Fixes                        │
│  LI Feature Requests                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 5: Tasks (Down) ===
┌ Navigation ──────────────────────────┐
│▸ LI Sprint Planning                  │
│  LI Bug Fixes                        │
│  LI Feature Requests                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 6: Lists (Up) ===
┌ Navigation ──────────────────────────┐
│▸ LI Sprint Planning                  │
│  LI Bug Fixes                        │
│  LI Feature Requests                 │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 7: Folders (Up) ===
┌ Navigation ──────────────────────────┐
│▸ FL Q1 Projects                      │
│  FL Q2 Projects                      │
│  FL Q3 Projects                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 8: Spaces (Up) ===
┌ Navigation ──────────────────────────┐
│▸ SP Backend Team                     │
│  SP Frontend Team                    │
│  SP DevOps Team                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘

=== Level 9: Workspaces (Up) ===
┌ Navigation ──────────────────────────┐
│▸ WS Engineering                      │
│  WS Marketing                        │
│  WS Design                           │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
