tests/snapshots/snapshot_test__quit_dialog_enter_in_task_creation.snap
---
source: tests/snapshot_test.rs
assertion_line: 1470
expression: app.is_dialog_visible()
---
false
