tests/snapshots/snapshot_test__s_key_task_detail_status_picker.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌──────────────────────────────────────────────────────────────────────────────┐
┌ Task Detail ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│ Name: Review pull request                                                    │
│ Status: in progress                                                          │
│ Priority: high                                                               │
│ Assignees: None                                                              │
│ ┌ Description ─────────────────────────────────────────────────────────────┐ │
│ │No description   ┌ Change Status ───────────────────────┐                 │ │
│ │                 │  To Do [todo]                        │                 │ │
│ │                 │* In Progress [in_progress]           │                 │ │
│ │                 │  Done [done]                         │                 │ │
│ │                 │                                      │                 │ │
│ │                 │                                      │                 │ │
│ │                 │j/k: navigate | Enter: select | Esc: c│                 │ │
│ │                 └──────────────────────────────────────┘                 │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Select new status (j/k navigate, Enter select, Esc cancel) | j/k: Navigate | E│
└──────────────────────────────────────────────────────────────────────────────┘
