tests/snapshots/snapshot_test__sidebar_empty.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Navigation ──────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
