tests/snapshots/snapshot_test__sidebar_with_large_assigned_count.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Navigation ──────────────────────────┐
│👤  Assigned to Me (99)                │
│📬  Inbox                              │
│WS Engineering                        │
│SP Backend                            │
│FL API                                │
│LI Sprint Tasks                       │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
