tests/snapshots/snapshot_test__sidebar_with_selection.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Navigation ──────────────────────────┐
│▸ WS Engineering                      │
│  SP Backend                          │
│  FL API                              │
│  LI Sprint Tasks                     │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
