tests/snapshots/snapshot_test__sidebar_with_zero_assigned.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌ Navigation ──────────────────────────┐
│👤  Assigned to Me (0)                 │
│📬  Inbox                              │
│WS Engineering                        │
│SP Backend                            │
│FL API                                │
│LI Sprint Tasks                       │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
