tests/snapshots/snapshot_test__status_bar_error.snap
---
source: tests/snapshot_test.rs
expression: status.to_string()
---
 Error: Failed to load tasks. Please try again.
