tests/snapshots/snapshot_test__status_bar_help.snap
---
source: tests/snapshot_test.rs
expression: status.to_string()
---
 j/k: Navigate | Enter: Select | Esc: Back | ?: Help | q: Quit
