tests/snapshots/snapshot_test__task_detail_before_s_key.snap
---
source: tests/snapshot_test.rs
expression: snapshot
---
┌──────────────────────────────────────────────────────────────────────────────┐
┌ Task Detail ─────────────────────────────────────────────────────────────────┐
│                                                                              │
│ Name: Review pull request                                                    │
│ Status: in progress                                                          │
│ Priority: high                                                               │
│ Assignees: None                                                              │
│ ┌ Description ─────────────────────────────────────────────────────────────┐ │
│ │No description                                                            │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ │                                                                          │ │
│ └──────────────────────────────────────────────────────────────────────────┘ │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ | e: Edit task | Tab: Comments | Esc: Back | ? - Help                        │
└──────────────────────────────────────────────────────────────────────────────┘
